# chad_sim

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.7B2E2E6EB71AA651.idx
src/: main.cpp
